--- a/docs/content/index.html.md.erb
+++ b/docs/content/index.html.md.erb
@@ -31,7 +31,7 @@ The Greenplum Platform Extension Framework (PXF) provides parallel, high through
 
 -   [Administering PXF](about_pxf_dir.html)
 
-    This set of topics details the administration of PXF including configuration, initialization, and management procedures.
+    This set of topics details the administration of PXF including configuration and management procedures.
 
 -   [Accessing Hadoop with PXF](access_hdfs.html)
 
