--- a/docs/content/install_java.html.md.erb
+++ b/docs/content/install_java.html.md.erb
@@ -62,5 +62,5 @@ Perform the following procedure to install Java on the master, standby master, a
     JAVA_HOME=/usr/lib/jvm/jre
     ```
 
-5. Note the `$JAVA_HOME` setting; you provide this value when you initialize PXF.
+5. Note the `$JAVA_HOME` setting; you will need this value when you configure PXF.
 
