--- a/docs/content/pxf_kerbhdfs.html.md.erb
+++ b/docs/content/pxf_kerbhdfs.html.md.erb
@@ -23,7 +23,7 @@ Before you configure PXF for access to a secure HDFS filesystem, ensure that you
 
 - Configured a PXF server for the Hadoop cluster, and can identify the server configuration name.
 
-- Initialized, configured, and started PXF as described in [Configuring PXF](instcfg_pxf.html).
+- Configured and started PXF as described in [Configuring PXF](instcfg_pxf.html).
 
 - Verified that Kerberos is enabled for your Hadoop cluster.
 
