--- a/docs/content/ref/pxf-cluster.html.md.erb
+++ b/docs/content/ref/pxf-cluster.html.md.erb
@@ -14,10 +14,10 @@ where `<command>` is:
 
 ``` pre
 help
-init
+init (deprecated)
 prepare
 register
-reset
+reset (deprecated)
 restart
 start
 status
@@ -29,12 +29,10 @@ sync
 
 The `pxf cluster` utility command manages PXF on the master, standby master, and on all Greenplum Database segment hosts. You can use the utility to:
 
-- Initialize PXF configuration on all hosts in the Greenplum Database cluster.
-- Reset the PXF service instance on all hosts to its uninitialized state.
 - Start, stop, and restart the PXF service instance on all segment hosts.
 - Display the status of the PXF service instance on all segment hosts.
 - Synchronize the PXF configuration from the Greenplum Database master host to the standby master and to all segment hosts.
-- Copy the extension files from the PXF installation on each host to the Greenplum installation on the host after a Greenplum upgrade.
+- Copy the PXF extension control file from the PXF installation on each host to the Greenplum installation on the host after a Greenplum upgrade.
 - Prepare a new `$PXF_BASE` runtime configuration directory.
 
 `pxf cluster` requires a running Greenplum Database cluster. You must run the utility on the Greenplum Database master host.
@@ -46,17 +44,17 @@ The `pxf cluster` utility command manages PXF on the master, standby master, and
 <dt>help</dt>
 <dd>Display the `pxf cluster` help message and then exit.</dd>
 
-<dt>init</dt>
-<dd>Initialize the PXF service instance on the master, standby master, and on all segment hosts. The command also copies the PXF extension files from the PXF installation to the Greenplum installation on each segment host. (Specify the `--skip-register` option to instruct PXF to skip this initialization step.) When you initialize PXF across your Greenplum Database cluster, you must identify the PXF user configuration directory via an environment variable named `$PXF_CONF`. If you do not set `$PXF_CONF` prior to initializing PXF, PXF returns an error.</dd>
+<dt>init (deprecated)</dt>
+<dd>The command is equivalent to the `register` command.</dd>
 
 <dt>prepare</dt>
 <dd>Prepare a new `$PXF_BASE` directory on each Greenplum Database host. When you run the command, you must identify the new PXF runtime configuration directory via an environment variable named `PXF_BASE`. PXF copies runtime configuration file templates and directories to this `$PXF_BASE`.</dd>
 
 <dt>register</dt>
-<dd>Copy the PXF extension files from the PXF installation on each host to the Greenplum installation on the host. This command requires that `$GPHOME` be set, and is typically run after you upgrade your Greenplum Database installation.</dd>
+<dd>Copy the PXF extension control file from the PXF installation on each host to the Greenplum installation on the host. This command requires that `$GPHOME` be set, and is run once after you install PXF 6.x the first time, or run after you upgrade your Greenplum Database installation.</dd>
 
-<dt>reset</dt>
-<dd>Reset the PXF service instance on the master, standby master, and on all segment hosts. Resetting removes PXF runtime files and directories, and returns PXF to an uninitialized state. You must stop the PXF service instance running on each segment host before you reset PXF in your Greenplum Database cluster.</dd>
+<dt>reset (deprecated) </dt>
+<dd>The command is a no-op.</dd>
 
 <dt>restart</dt>
 <dd>Stop, and then start, the PXF service instance on all segment hosts.</dd>
@@ -71,15 +69,10 @@ The `pxf cluster` utility command manages PXF on the master, standby master, and
 <dd>Stop the PXF service instance on all segment hosts.</dd>
 
 <dt>sync  </dt>
-<dd>Synchronize the PXF configuration (`$PXF_CONF`) from the master to the standby master and to all Greenplum Database segment hosts. By default, this command updates files on and copies files to the remote. You can instruct PXF to also delete files during the synchronization; see [Options](#options).</dd>
-<dd>If you have updated the PXF user configuration or added JAR files, you must also restart PXF after you synchronize the PXF configuration.</dd>
+<dd>Synchronize the PXF configuration (`$PXF_BASE`) from the master to the standby master and to all Greenplum Database segment hosts. By default, this command updates files on and copies files to the remote. You can instruct PXF to also delete files during the synchronization; see [Options](#options).</dd>
+<dd>If you have updated the PXF user configuration or add new JAR or native library dependencies, you must also restart PXF after you synchronize the PXF configuration.</dd>
 
 ## <a id="options"></a>Options
-
-The `pxf cluster init` command takes the following option:
-
-<dt>&#8211;&#8211;skip-register </dt>
-<dd>Do not copy the PXF extension files to the Greenplum installation directory on the hosts.</dd>
 
 The `pxf cluster sync` command takes the following option:
 
