--- a/docs/content/ref/pxf.html.md.erb
+++ b/docs/content/ref/pxf.html.md.erb
@@ -15,10 +15,10 @@ where \<command\> is:
 ``` pre
 cluster
 help
-init
+init (deprecated)
 prepare
 register
-reset
+reset (deprecated)
 restart
 start
 status
@@ -29,15 +29,14 @@ version
 
 ## <a id="topic1__section3"></a>Description
 
-The `pxf` utility manages the PXF configuration and the PXF service instance on the local Greenplum Database host.
+The `pxf` utility manages the PXF configuration and the PXF service instance on the local Greenplum Database host. You can use the utility to:
 
-You can initialize or reset PXF on the master, master standby, or a specific segment host. You can also synchronize the PXF configuration from the master to these hosts.
+- Synchronize the PXF configuration from the master to the standby master or to a segment host.
+- Start, stop, or restart the PXF service instance on a specific segment host, or display the status of the PXF service instance running on a segment host.
+- Copy the PXF extension control file from a PXF installation on the host to the Greenplum installation on the host after a Greenplum upgrade.
+- Prepare a new `$PXF_BASE` runtime configuration directory on the host.
 
-You can start, stop, or restart the PXF service instance on a specific segment host, or display the status of the PXF service instance running on a segment host.
-
-You can prepare a new `$PXF_BASE` runtime configuration directory on the host, or copy the extension files from a PXF installation on the host to the Greenplum installation on the host after a Greenplum upgrade.
-
-(Use the [`pxf cluster`](pxf-cluster.html#topic1) command to prepare a new `$PXF_BASE`, copy extension files to `$GPHOME` on all hosts, initialize, or reset PXF on all hosts, synchronize the PXF configuration to the Greenplum Database cluster, or to start, stop, or display the status of the PXF service instance on all segment hosts in the cluster.)
+(Use the [`pxf cluster`](pxf-cluster.html#topic1) command to prepare a new `$PXF_BASE` on all hosts, copy the PXF extension control file to `$GPHOME` on all hosts, synchronize the PXF configuration to the Greenplum Database cluster, or to start, stop, or display the status of the PXF service instance on all segment hosts in the cluster.)
 
 ## <a id="commands"></a>Commands
 
@@ -47,17 +46,17 @@ You can prepare a new `$PXF_BASE` runtime configuration directory on the host, o
 <dt>help</dt>
 <dd>Display the `pxf` management utility help message and then exit.</dd>
 
-<dt>init</dt>
-<dd>Initialize the PXF service instance on the host. The command also copies the PXF extension files from the PXF installation to the Greenplum installation on the host. (Specify the `--skip-register` option to instruct PXF to skip this initialization step.) When you initialize PXF, you must identify the PXF user configuration directory via an environment variable named `$PXF_CONF`. If you do not set `$PXF_CONF` prior to initializing PXF, PXF prompts you to accept or decline the default user configuration directory, `$HOME/pxf`, during the initialization process. See [Options](pxf.html#options).</dd>
+<dt>init (deprecated)</dt>
+<dd>The command is equivalent to the `register` command.</dd>
 
 <dt>prepare</dt>
 <dd>Prepare a new `$PXF_BASE` directory on the host. When you run the command, you must identify the new PXF runtime configuration directory via an environment variable named `PXF_BASE`. PXF copies runtime configuration file templates and directories to this `$PXF_BASE`.</dd>
 
 <dt>register</dt>
-<dd>Copy the PXF extension files from the PXF installation on the host to the Greenplum installation on the host. This command requires that `$GPHOME` be set, and is typically run after you upgrade your Greenplum Database installation.</dd>
+<dd>Copy the PXF extension files from the PXF installation on the host to the Greenplum installation on the host. This command requires that `$GPHOME` be set, and is run once after you install PXF 6.x the first time, or run when you upgrade your Greenplum Database installation.</dd>
 
-<dt>reset</dt>
-<dd>Reset the PXF service instance running on the host. Resetting removes PXF runtime files and directories, and returns PXF to an uninitialized state. You must stop the PXF service instance running on a segment host before you reset PXF on the host.</dd>
+<dt>reset (deprecated)</dt>
+<dd>The command is a no-op.</dd>
 
 <dt>restart</dt>
 <dd>Restart the PXF service instance running on the segment host.</dd>
@@ -72,25 +71,12 @@ You can prepare a new `$PXF_BASE` runtime configuration directory on the host, o
 <dd>Stop the PXF service instance running on the segment host.</dd>
 
 <dt>sync  </dt>
-<dd>Synchronize the PXF configuration (`$PXF_CONF`) from the master to a specific Greenplum Database standby master or segment host. You must run `pxf sync` on the master host. By default, this command updates files on and copies files to the remote. You can instruct PXF to also delete files during the synchronization; see [Options](#options).</dd>
+<dd>Synchronize the PXF configuration (`$PXF_BASE`) from the master to a specific Greenplum Database standby master or segment host. You must run `pxf sync` on the master host. By default, this command updates files on and copies files to the remote. You can instruct PXF to also delete files during the synchronization; see [Options](#options).</dd>
 
 <dt>version  </dt>
 <dd>Display the PXF version and then exit.</dd>
 
 ## <a id="options"></a>Options
-
-The `pxf init` command takes the following options:
-
-<dt>&#8211;y </dt>
-<dd>Do not prompt, use the default `$PXF_CONF` directory location if the environment variable is not set.</dd>
-
-<dt>&#8211;&#8211;skip-register </dt>
-<dd>Do not copy the PXF extension files to the Greenplum installation directory on the segment host.</dd>
-
-The `pxf reset` command takes the following option:
-
-<dt>&#8211;f | &#8211;&#8211;force </dt>
-<dd>Do not prompt before resetting the PXF service instance; reset without user interaction.</dd>
 
 The `pxf sync` command, which you must run on the Greenplum Database master host, takes the following option and argument:
 
