--- a/docs/content/col_project.html.md.erb
+++ b/docs/content/col_project.html.md.erb
@@ -10,8 +10,8 @@ Column projection is automatically enabled for the `pxf` external table protocol
 
 | Data Source | Connector | Profile(s) |
 |-------------|---------------|---------|
-| External SQL database | JDBC Connector | Jdbc |
-| Hive | Hive Connector | Hive (accessing tables stored as Text, Parquet, RCFile, and ORC), HiveRC, HiveORC, HiveVectorizedORC |
+| External SQL database | JDBC Connector | jdbc |
+| Hive | Hive Connector | hive (accessing tables stored as Text, Parquet, RCFile, and ORC), hive:rc, hive:orc |
 | Hadoop | HDFS Connector | hdfs:parquet |
 | Network File System | File Connector | file:parquet |
 | Amazon S3 | S3-Compatible Object Store Connectors | s3:parquet |
