--- a/docs/content/access_objstore.html.md.erb
+++ b/docs/content/access_objstore.html.md.erb
@@ -39,6 +39,7 @@ The PXF object store connectors provide built-in profiles to support the followi
 - Text
 - Avro
 - JSON
+- ORC
 - Parquet
 - AvroSequenceFile
 - SequenceFile
@@ -51,6 +52,7 @@ The PXF connectors to Azure expose the following profiles to read, and in many c
 | delimited [text with quoted linefeeds](objstore_text.html) | wasbs:text:multi | adl:text:multi |
 | [Avro](objstore_avro.html) | wasbs:avro | adl:avro |
 | [JSON](objstore_json.html) | wasbs:json | adl:json |
+| [ORC](objstore_orc.html) | wasbs:orc | adl:orc |
 | [Parquet](objstore_parquet.html) | wasbs:parquet | adl:parquet |
 | AvroSequenceFile | wasbs:AvroSequenceFile | adl:AvroSequenceFile |
 | [SequenceFile](objstore_seqfile.html) | wasbs:SequenceFile | adl:SequenceFile |
@@ -63,6 +65,7 @@ Similarly, the PXF connectors to Google Cloud Storage, Minio, and S3 expose thes
 | delimited [text with quoted linefeeds](objstore_text.html) | gs:text:multi | s3:text:multi |
 | [Avro](objstore_avro.html) | gs:avro | s3:avro |
 | [JSON](objstore_json.html) | gs:json | s3:json |
+| [ORC](objstore_orc.html) | gs:orc | s3:orc |
 | [Parquet](objstore_parquet.html) | gs:parquet | s3:parquet |
 | AvroSequenceFile | gs:AvroSequenceFile | s3:AvroSequenceFile |
 | [SequenceFile](objstore_seqfile.html) | gs:SequenceFile | s3:SequenceFile |
